# ButterflyPACK

./: .ci_tests.sh  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml_old  .travis.yml  .travis_tests.sh  CHANGELOG  CMakeLists.txt  Info.txt  Makefile  PrecisionPreprocessing.sh  README.md  butterflypack.pc.in  config_gnu485_ubuntu.sh  hodlrbf.pc.in  license.txt  make.inc  make.inc.in  makefile  pbs_script.sh  run_cmake_build_gnu485_ubuntu.sh  travis_debug.sh
CPP_INTERFACE/: CMakeLists.txt  CPPWrapper.cpp  CPPWrapper.hpp  m_BPACK_utilities.f90
EXAMPLE/: ButterflyMVP.f90  CMakeLists.txt  C_EMCURV_wrapper.h  DoCubicInterp2D.c  DoCubicInterp2D.h  EMCURV_Driver.f90  EMCURV_Eigen_Driver.f90  EMCURV_Module.f90  EMSURF_Driver.f90  EMSURF_Driver_mp.f90  EMSURF_Driver_sp.f90  EMSURF_Eigen_Driver.f90  EMSURF_Module.f90  EMSURF_Module_mp.f90  EMSURF_Module_sp.f90  EMSURF_Port_Driver.f90  EMSURF_Port_Eigen_Driver.f90  EMSURF_Port_Module.f90  EMSURF_Port_Module1.f90  FIO_Driver.cpp  FULLMATKERREG_Driver.f90  FULLMAT_Driver.f90  FULLMAT_Driver_simple.f90  FrontalDist_Driver.f90  Frontal_Driver.f90  HODLR_Randconst.f90  InterfaceTest.cpp  InterfaceTest_simple.cpp  InterfaceTest_simple_newapi.cpp  InterfaceTest_simple_seq.cpp  InterfaceTest_simple_seq_newapi.cpp  InverseFIO2D_Driver.cpp  InverseFIO2D_SB_Driver.cpp  InverseFIO_Driver.cpp  KERREG_Driver.f90  KERREG_Driver_seq.f90  Makefile  RCS_monostatic.txt  README.md  RankBenchmark_Driver.cpp  (+28 more)
EXAMPLE/FULLMAT_DATA/: A_alpha_N128.csv  A_alpha_N256.csv  A_alpha_N32.csv  A_alpha_N64.csv  F100.mat  FULLMAT.csv  Frontal_poisson_50.mat  Geometry.csv  Geometry_10k.csv  Geometry_3D.csv  Smatrix.geo  file_merge.sh  file_split.sh
EXAMPLE/G2D/: G2D.cpp  G2D.h  G2D_rtw.mk  G2D_types.h  bessel.cpp  bessel.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
MPI_DUMMY/: CMakeLists.txt  mpi_dummy.f90  mpi_dummy.fi
SRC/: BPACK_constr.f90  BPACK_constr.i90  BPACK_defs.f90  BPACK_defs.i90  BPACK_factor.f90  BPACK_factor.i90  BPACK_randomized.f90  BPACK_solve_mul.f90  BPACK_solve_mul.i90  BPACK_structure.f90  BPACK_utilities.f90  BPACK_utilities.i90  BPACK_wrapper.f90  BPACK_wrapper.h  Bplus_compress.f90  Bplus_compress.i90  Bplus_compress_forward.f90  Bplus_factor.f90  Bplus_factor.i90  Bplus_inverse_diagonal_randomized_schur_partitioned.f90  Bplus_inversion.f90  Bplus_pack_unpack_for_MPI.f90  Bplus_randomized.f90  Bplus_randomized.i90  Bplus_rightmultiply_inverse_randomized.f90  Bplus_update.f90  Bplus_utilities.f90  Bplus_utilities.i90  Butterfly_compress_forward.f90  Butterfly_exact_randomized.f90  Butterfly_inverse_diagonal_randomized.f90  Butterfly_inverse_diagonal_randomized_schur_partitioned.f90  Butterfly_rightmultiply_inverse_randomized.f90  CEM_RCS_bistatic.f90  CEM_RCS_monostatic.f90  CEM_analytic_part.f90  CEM_current_node_patch_mapping.f90  CEM_element_Vinc_cfie.f90  CEM_gaussian_point.f90  CInterface_config.h  (+79 more)
SRC_COMPLEX/: CMakeLists.txt  Makefile  cBPACK_constr.f90  cBPACK_defs.f90  cBPACK_factor.f90  cBPACK_randomized.f90  cBPACK_solve_mul.f90  cBPACK_structure.f90  cBPACK_utilities.f90  cBPACK_wrapper.f90  cBPACK_wrapper.h  cBplus_compress.f90  cBplus_factor.f90  cBplus_pack_unpack_for_MPI.f90  cBplus_randomized.f90  cBplus_utilities.f90  cButterflyPACK_config.fi  cC_BPACK_wrapper.cpp  cLAPACK_zgeqp3mod.f  cMAGMA_utilities.f90  cMISC_DenseLA.f90  cMISC_linkedlist.f90  cMISC_utilities.f90  cPy_BPACK_worker.py  cPy_BPACK_wrapper.cpp  cPy_BPACK_wrapper.py  cparsec_hmat_factorization_ptg.jdf  cparsec_hmat_ptg_bridge.c  cparsec_hmat_ptg_bridge.h  cparsec_hmat_ptg_bridge_fortran.f90
SRC_DOUBLE/: ButterflyPACK_config.fi  CMakeLists.txt  HODLR_config.fi  Makefile  dBPACK_constr.f90  dBPACK_defs.f90  dBPACK_factor.f90  dBPACK_randomized.f90  dBPACK_solve_mul.f90  dBPACK_structure.f90  dBPACK_utilities.f90  dBPACK_wrapper.f90  dBPACK_wrapper.h  dBplus_compress.f90  dBplus_factor.f90  dBplus_inversion.f90  dBplus_pack_unpack_for_MPI.f90  dBplus_randomized.f90  dBplus_update.f90  dBplus_utilities.f90  dC_BPACK_wrapper.cpp  dC_HODLR_wrapper.h  dDenseLA.f90  dHODLR_constr.f90  dHODLR_defs.f90  dHODLR_factor.f90  dHODLR_randomized.f90  dHODLR_solve_mul.f90  dHODLR_structure.f90  dHODLR_utilities.f90  dHODLR_wrapper.f90  dLAPACK_sgetrfmod.f  dLAPACK_strevc3mod.f  dMAGMA_utilities.f90  dMISC_DenseLA.f90  dMISC_linkedlist.f90  dMISC_utilities.f90  dPy_BPACK_worker.py  dPy_BPACK_wrapper.cpp  dPy_BPACK_wrapper.py  (+5 more)
SRC_DOUBLECOMPLEX/: CMakeLists.txt  Makefile  zBPACK_constr.f90  zBPACK_defs.f90  zBPACK_factor.f90  zBPACK_randomized.f90  zBPACK_solve_mul.f90  zBPACK_structure.f90  zBPACK_utilities.f90  zBPACK_wrapper.f90  zBPACK_wrapper.h  zBplus_compress.f90  zBplus_factor.f90  zBplus_inversion.f90  zBplus_pack_unpack_for_MPI.f90  zBplus_randomized.f90  zBplus_update.f90  zBplus_utilities.f90  zButterflyPACK_config.fi  zC_BPACK_wrapper.cpp  zC_HODLR_wrapper.h  zDenseLA.f90  zHODLR_constr.f90  zHODLR_defs.f90  zHODLR_factor.f90  zHODLR_randomized.f90  zHODLR_solve_mul.f90  zHODLR_structure.f90  zHODLR_utilities.f90  zHODLR_wrapper.f90  zLAPACK_zgetrfmod.f  zMAGMA_utilities.f90  zMISC_DenseLA.f90  zMISC_linkedlist.f90  zMISC_utilities.f90  zPy_BPACK_worker.py  zPy_BPACK_wrapper.cpp  zPy_BPACK_wrapper.py  zSCALAPACK_pdgeqpfmod.f  zSCALAPACK_pdgetrfmod.f  (+6 more)
SRC_SINGLE/: CMakeLists.txt  Makefile  sBPACK_constr.f90  sBPACK_defs.f90  sBPACK_factor.f90  sBPACK_randomized.f90  sBPACK_solve_mul.f90  sBPACK_structure.f90  sBPACK_utilities.f90  sBPACK_wrapper.f90  sBPACK_wrapper.h  sBplus_compress.f90  sBplus_factor.f90  sBplus_pack_unpack_for_MPI.f90  sBplus_randomized.f90  sBplus_utilities.f90  sButterflyPACK_config.fi  sC_BPACK_wrapper.cpp  sLAPACK_cgeqp3mod.f  sLAPACK_dgetrfmod.f  sLAPACK_sgetrf2mod.f  sMAGMA_utilities.f90  sMISC_DenseLA.f90  sMISC_linkedlist.f90  sMISC_utilities.f90  sPy_BPACK_worker.py  sPy_BPACK_wrapper.cpp  sPy_BPACK_wrapper.py  sSCALAPACK_psgetf2mod.f  sparsec_hmat_factorization_ptg.jdf  sparsec_hmat_ptg_bridge.c  sparsec_hmat_ptg_bridge.h  sparsec_hmat_ptg_bridge_fortran.f90
(+650 files in other folders)
